--- a/package.json
+++ b/package.json
@@ -1,22 +1,31 @@
 {
   "name": "teacher-attendance",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "babel-plugin-inline-import": "^3.0.0",
+    "drizzle-orm": "^0.44.3",
     "expo": "~53.0.20",
+    "expo-router": "~5.1.4",
+    "expo-sqlite": "^15.2.14",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
-    "react-native": "0.79.5"
+    "react-native": "0.79.5",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "drizzle-kit": "^0.31.4",
     "typescript": "~5.8.3"
   },
   "private": true
