[feat]: added attendance, class, and student screens

--- a/package.json
+++ b/package.json
@@ -11,19 +11,25 @@
     "db:migrate": "drizzle-kit migrate"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "clsx": "^2.1.1",
     "drizzle-orm": "^0.44.3",
     "expo": "~53.0.20",
     "expo-router": "~5.1.4",
     "expo-secure-store": "~14.2.3",
     "expo-sqlite": "^15.2.14",
     "expo-status-bar": "~2.2.3",
+    "lucide-react-native": "^0.526.0",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.5",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1"
+    "react-native-screens": "~4.11.1",
+    "react-native-svg": "^15.12.0",
+    "tailwind-merge": "^3.3.1",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
