--- a/package.json
+++ b/package.json
@@ -19,20 +19,18 @@
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.44.3",
     "lucide-react-native": "^0.526.0",
-    "nativewind": "^4.0.0",
     "react": "19.1.0",
     "react-native": "0.80.2",
-    "react-native-gesture-handler": "^2.24.0",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-gesture-handler": "^2.27.2",
     "react-native-quick-sqlite": "^8.2.7",
-    "react-native-reanimated": "^3.17.5",
     "react-native-safe-area-context": "^5.4.0",
-    "react-native-screens": "^4.11.1",
     "react-native-svg": "^15.12.0",
-    "tailwind-merge": "^3.3.1",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@babel/plugin-proposal-decorators": "^7.28.0",
     "@babel/preset-env": "^7.25.2",
     "@babel/runtime": "^7.25.2",
     "@react-native-community/cli": "19.1.1",
@@ -55,10 +53,8 @@
     "metro-react-native-babel-preset": "^0.77.0",
     "postcss": "^8.5.6",
     "prettier": "3.0.0",
-    "prettier-plugin-tailwindcss": "^0.5.11",
     "react-test-renderer": "19.1.0",
     "strip-ansi": "6.0.1",
-    "tailwindcss": "^3.4.17",
     "typescript": "5.0.4"
   },
   "engines": {
