--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -4,3 +4,7 @@ extensions.configure(com.facebook.react.ReactSettingsExtension){ ex -> ex.autoli
 rootProject.name = 'teacher_attendance'
 include ':app'
 includeBuild('../node_modules/@react-native/gradle-plugin')
+
+// WatermelonDB configuration - use the correct module name
+include ':nozbe_watermelondb'
+project(':nozbe_watermelondb').projectDir = new File(rootProject.projectDir, '../node_modules/@nozbe/watermelondb/native/android')
