--- a/package.json
+++ b/package.json
@@ -12,18 +12,19 @@
     "db:migrate": "drizzle-kit migrate"
   },
   "dependencies": {
+    "@nozbe/watermelondb": "^0.28.0",
+    "@nozbe/with-observables": "^1.6.0",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native/new-app-screen": "0.80.2",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.4.1",
     "clsx": "^2.1.1",
-    "drizzle-orm": "^0.44.3",
+    "date-fns": "^4.1.0",
     "lucide-react-native": "^0.526.0",
     "react": "19.1.0",
     "react-native": "0.80.2",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.27.2",
-    "react-native-quick-sqlite": "^8.2.7",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-svg": "^15.12.0",
     "zustand": "^5.0.6"
