--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@nozbe/watermelondb": "^0.28.0",
     "@nozbe/with-observables": "^1.6.0",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/geolocation": "^3.4.0",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-native/new-app-screen": "0.80.2",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.4.1",
@@ -26,6 +28,7 @@
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.27.2",
     "react-native-safe-area-context": "^5.4.0",
+    "react-native-screens": "^4.13.1",
     "react-native-svg": "^15.12.0",
     "zustand": "^5.0.6"
   },
